fixed message from others align, emojipicker autoFocusSearch = false

--- a/src/components/chatRoom/messageArea/messageArea.scss
+++ b/src/components/chatRoom/messageArea/messageArea.scss
@@ -56,6 +56,10 @@
 
         &.message-from-other {
             .message-box {
+                display: flex;
+                flex-direction: column;
+                align-items: start;
+
                 .message {
                     background-color: rgba(9, 8, 24, 0.15);
                 }
